2009-01-29  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpxpak.c (lpxpak_datablob_init): added.
	(lpxpak_datablob_destroy): added.
	(lpxpak_datablob_compile): added.
	(lpxpak_blob_compile): changed to use lpxpak_datablob_compile.

2009-01-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpxpak.c (lpxpak_indexblob_init): added.
	(lpxpak_indexblob_destroy): added.
	(lpxpak_indexblob_destroy): added.

	* lib/liblpxpak.h (lpxpak_parse_fd): changed to use the newly
	introduced lpxpak_blob_get_fd
	(lpxpak_parse_data): changed to use lpxpak_blob_t structures as
	input.
	(lpxpak_blob_t): added.
	(lpxpak_get_blob_fd): added.
	(lpxpak_blob_init): added.
	(lpxpak_blob_destroy): added.
	(lpxpak_get_blob_fd): changed to use newly introduced
	lpxpak_blob_init().
	(lpxpak_get_blob_fd): renamed to lpxpak_blob_get_fd().
	(lpxpak_blob_get_path): added.
	(lpxpak_blob_compile): added.

2009-01-27  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c: fixed memleaks, buffer overflows and several
	other memory related problems valgrind was complaining about.

2009-01-20  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.h: documented.

2009-01-19  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c (lpatom_get_version): does now return the full
	version (including suffix and release).
	(lpatom_get_version): does now use strcat instead of manual string
	handling.
	(lpatom_get_fullname): does now use the new lpatom_get_version()
	function instead of calling get_suffix, get_release.
	(lpatom_get_fullname): does now use strcat instead of manual
	string handling.

2009-01-18  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblpatom.c (lpatom_version_cmp): now we also compare the
	suffix.

	* lib/liblpatom.h (lpatom_cmp): added.
	(lpatom_get_fullname): added.

2009-01-15  Lars Hartmann  <lars (at) chaotika (dot) org>

	* lib/liblputil.c (lputil_splitstr_destroy): fixed segfault.
